# calcumaker

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN-MODES.md  DESIGN.md  NAMING.md  README.md
.github/workflows/: ci.yml  notify-web.yml
doc/: keymap-15c.txt  keymap-16c.txt  keymap-fin.txt  keymap-sci.txt  review-2026-07.md
firmware/: README.md
firmware/calcumaker-core/: Cargo.toml  README.md
firmware/calcumaker-core/examples/: keymaps.rs  repl.rs
firmware/calcumaker-core/src/: app.rs  calc.rs  format.rs  keydoc.rs  keys.rs  lib.rs  matrix.rs  seg7.rs  value.rs
firmware/calcumaker-core/tests/: app.rs  engine.rs  keymaps.rs  seg7.rs
firmware/calcumaker-display-fw/: Cargo.toml  README.md  rust-toolchain.toml
firmware/calcumaker-display-fw/.cargo/: config.toml
firmware/calcumaker-display-fw/src/: main.rs  render.rs  tm1640.rs
firmware/calcumaker-display-proto/: Cargo.toml  README.md
firmware/calcumaker-display-proto/src/: lib.rs
firmware/calcumaker-emu/: Cargo.toml  README.md
firmware/calcumaker-emu/src/: main.rs
firmware/calcumaker-fw/: Cargo.toml  Makefile  README.md  build.rs  memory.x  rust-toolchain.toml
firmware/calcumaker-fw/.cargo/: config.toml
firmware/calcumaker-fw/src/: bootloader.rs  clock.rs  display.rs  keypad.rs  main.rs  rpn.rs  selftest.rs  usb.rs
firmware/calcumaker-fw/src/numeric/: mod.rs
firmware/calcumaker-matrix-fw/: Cargo.toml  README.md  build.rs  memory.x  rust-toolchain.toml
firmware/calcumaker-matrix-fw/.cargo/: config.toml
firmware/calcumaker-matrix-fw/src/: font.rs  main.rs  ws2812.rs
firmware/gmp-mpfr-nostd/: Cargo.toml  README.md  build.rs
firmware/gmp-mpfr-nostd/src/: complex.rs  ffi.rs  float.rs  integer.rs  lib.rs
firmware/gmp-mpfr-nostd/tests/: smoke.rs
firmware/scripts/: 70-calcumaker.rules  build-gmp-mpfr-arm.sh  dfu-flash.sh
hardware/: Makefile  PARTS.md  README.md  fp-lib-table
hardware/calcumaker-display/: aux.kicad_sch  calcumaker-display.kicad_pro  calcumaker-display.kicad_sch  disp_mcu.kicad_sch  disp_power.kicad_sch  display.kicad_sch  display_row.kicad_sch  interconnect.kicad_sch
hardware/calcumaker-keyboard/: annunc.kicad_sch  calcumaker-keyboard.kicad_pro  calcumaker-keyboard.kicad_sch  fp-lib-table  kbd_mcu.kicad_sch  key_row.kicad_sch  key_row_9.kicad_sch  keylight.kicad_sch  keypad.kicad_sch  main_if.kicad_sch  rgb_power.kicad_sch
hardware/calcumaker-main/: annunc.kicad_sch  calcumaker-main.kicad_pro  calcumaker-main.kicad_sch  clock.kicad_sch  display_if.kicad_sch  keypad.kicad_sch  mcu.kicad_sch  prog.kicad_sch  psu.kicad_sch
hardware/calcumaker-matrix/: aux.kicad_sch  calcumaker-matrix.kicad_pro  calcumaker-matrix.kicad_sch  led_cluster.kicad_sch  led_row.kicad_sch  matrix_if.kicad_sch  rgb_power.kicad_sch  rp2040.kicad_sch  sym-lib-table
hardware/calcumaker-mcu/: calcumaker-mcu.kicad_pro  calcumaker-mcu.kicad_sch  clock.kicad_sch  display_if.kicad_sch  keyboard_if.kicad_sch  mcu.kicad_sch  prog.kicad_sch  psu.kicad_sch  qspi_flash.kicad_sch
hardware/lib/: ATTRIBUTIONS.md
hardware/lib/3dmodels/: README.md
hardware/lib/footprints.pretty/: LED_XL1010RGBC_1.0x1.0mm.kicad_mod  README.md  SW_Cherry_MX_1.00u_PCB.kicad_mod  SW_MX_HS_CPG151101S11_1u.kicad_mod  SW_MX_HS_CPG151101S11_2u_Vertical.kicad_mod
hardware/lib/symbols/: calcumaker.kicad_sym
hardware/scripts/: README.md  calcumaker-display.schgen.py  calcumaker-keyboard.schgen.py  calcumaker-main.schgen.py  calcumaker-matrix.schgen.py  calcumaker-mcu.schgen.py  kschgen.py
reference/: README.md
