[package]
name = "calcumaker-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "Calcumaker 16 calculator engine — RPN stack + arbitrary-precision math (GNU MP + MPFR via rug). Host-testable library."
readme = "README.md"

[dependencies]
# Single math path: real GNU MP + MPFR through our own no_std FFI bindings
# (links system libs on host, cross-built libs on target). No std, no pure-Rust
# fallback. The engine itself is no_std + alloc.
gmp-mpfr-nostd = { path = "../gmp-mpfr-nostd" }

[[example]]
name = "repl"
