[package]
name = "calcumaker-display-fw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "calcumaker — 7-seg display MODULE firmware (STM32G031K8, no_std): an SPI-slave 'display intent' receiver that renders to 3x TM1640"
readme = "README.md"

# The 7-seg display board's own MCU. It is an SPI SLAVE: the U575 (calcumaker-fw)
# writes a `calcumaker-display-proto::DisplayFrame`; this fw renders the text rows
# to seg bytes and bit-bangs the 3 TM1640s. No bignum here (no GMP/alloc) — the
# calculator engine stays on the U575.
[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = { version = "1.0", optional = true }
# Dev/debug (RTT + defmt) — feature `dev`.
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

# Embassy async HAL + runtime for the STM32G0 (Cortex-M0+, thumbv6m). `memory-x`
# makes embassy supply the linker memory map for the chosen chip feature (so no
# local memory.x, same as calcumaker-fw).
embassy-stm32 = { version = "0.6", default-features = false, features = [
    "rt", "memory-x", "time-driver-any", "exti", "unstable-pac",
] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5", features = ["tick-hz-32_768"] }
embassy-futures = "0.1"

# The shared display-intent wire protocol (frame the U575 sends).
calcumaker-display-proto = { path = "../calcumaker-display-proto" }

[features]
# Production image: STM32G031K8U6, spin-on-panic, no logging.
default = ["panic-halt", "production"]
production = ["embassy-stm32/stm32g031k8"]
# Dev logging over RTT (SWD Tag-Connect J3) + panic-probe.
dev = [
    "dep:defmt", "dep:defmt-rtt", "dep:panic-probe",
    "embassy-stm32/defmt", "embassy-executor/defmt", "embassy-time/defmt",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.dev]
opt-level = 1
