[package]
name = "calcumaker-fw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "calcumaker — programmer's/technical arbitrary-precision RPN calculator firmware (no_std)"
readme = "README.md"

# NOTE: dependency versions below are starting points — verify/bump with
# `cargo add` once the MCU is pinned (see ../../DESIGN.md research notes).

[dependencies]
# critical-section-single-core: the critical-section impl embedded-alloc's
# heap locking needs (single-core U575: disable interrupts).
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"
# Heap for the arbitrary-precision allocator. GMP is pointed at it via
# mp_set_memory_functions. TLSF: better fragmentation behaviour for the
# variable-size bignum allocations.
embedded-alloc = { version = "0.6", default-features = false, features = ["tlsf"] }

# --- Calculator engine -------------------------------------------------------
# The RPN + arbitrary-precision engine (GMP + MPFR, single path). The embedded
# build links the same API against GMP/MPFR cross-built for thumbv8m (set
# GMP_MPFR_LIBDIR — see build.rs). GMP/MPFR's C allocator (malloc/free/realloc/
# calloc) is shimmed onto the Rust global heap in main.rs.
calcumaker-core = { path = "../calcumaker-core", default-features = false }

# --- MCU HAL: STM32U575ZGT6 (selected — see ../../DESIGN.md) ------------------
# Move to embassy-stm32 with the U575 chip feature (verify exact feature name):
#   embassy-stm32   = { version = "0.2", features = ["stm32u575zg", "memory-x", "time-driver-any"] }
#   embassy-executor = { version = "0.6", features = ["arch-cortex-m", "executor-thread"] }
#   embassy-time    = "0.3"

# Bignum code is large; favour size and keep symbols for debugging.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
