[package]
name = "calcumaker-fw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "calcumaker — programmer's/technical arbitrary-precision RPN calculator firmware (no_std)"
readme = "README.md"

# NOTE: dependency versions below are starting points — verify/bump with
# `cargo add` once the MCU is pinned (see ../../DESIGN.md research notes).

[dependencies]
# critical-section-single-core: the critical-section impl embedded-alloc's
# heap locking needs (single-core U575: disable interrupts).
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
# Production panic handler (spin). The `nucleo` validation target swaps this for
# panic-probe so panics print over RTT — see [features] below.
panic-halt = { version = "1.0", optional = true }

# --- Nucleo-U575ZI-Q validation target (feature `nucleo`) --------------------
# RTT + defmt so the self-test streams its results back through the ST-LINK, and
# panic-probe so a panic is reported (not silently spun). These are the ONLY
# additions vs. the production image; all engine + self-test code is shared.
defmt       = { version = "0.3", optional = true }
defmt-rtt   = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }
# Heap for the arbitrary-precision allocator. GMP is pointed at it via
# mp_set_memory_functions. TLSF: better fragmentation behaviour for the
# variable-size bignum allocations.
embedded-alloc = { version = "0.6", default-features = false, features = ["tlsf"] }

# --- Calculator engine -------------------------------------------------------
# The RPN + arbitrary-precision engine (GMP + MPFR, single path). The embedded
# build links the same API against GMP/MPFR cross-built for thumbv8m (set
# GMP_MPFR_LIBDIR — see build.rs). GMP/MPFR's C allocator (malloc/free/realloc/
# calloc) is shimmed onto the Rust global heap in main.rs.
calcumaker-core = { path = "../calcumaker-core", default-features = false }

# --- Embassy async HAL + runtime ---------------------------------------------
# One crate serves both boards: the MCU chip feature (stm32u575zi for the Nucleo
# vs stm32u575rg for production) is selected by our own nucleo/production
# features below. `memory-x` makes embassy supply the linker memory map per chip
# (so the local memory.x is gone; the ZI's 2 MB vs RG's 1 MB is handled for us).
# `low-power` + the stm32 low-power executor: when idle it enters the deepest
# sleep the peripheral stop-refcounts allow. USB OTG is stop_mode=Stop1, so while
# the console is enumerated the part stays in Sleep (WFI, USB-safe); deeper STOP
# is only reached once USB is gated. NOTE: the general TIM time driver
# (time-driver-any) can't keep time across STOP, so this pass delivers Sleep-mode
# idling; deep STOP2 with timekeeping needs an RTC time driver, which
# embassy-stm32 0.6 doesn't yet provide for the U5 (its LPTIM driver miscompiles
# against this metapac). Revisit on an embassy bump. See DESIGN.md → Low-power.
embassy-stm32 = { version = "0.6", default-features = false, features = [
    "rt", "memory-x", "time-driver-any", "low-power", "executor-thread", "exti", "unstable-pac",
] }
# The executor itself + its `__pender` come from embassy-stm32's low-power
# `executor-thread` (see above); here we only need the task macro / Spawner /
# raw executor, so no arch/executor features (they'd double-define `__pender`).
embassy-executor = { version = "0.10" }
# tick-hz-32768 matches the LSI/RTC granularity: with the default 1 MHz tick the
# U5 low-power time driver miscalculates STOP durations (embassy#3504, filed on a
# Nucleo-U575ZI-Q). 32 kHz ticks are plenty for our ms-scale timing.
embassy-time = { version = "0.5", features = ["tick-hz-32_768"] }
embassy-futures = "0.1"
embassy-usb = "0.6"
# HID report descriptors (KeyboardReport) for the composite device. Must match
# the version embassy-usb links (0.10) so the AsInputReport traits unify.
usbd-hid = "0.10"
static_cell = "2"

[features]
# Production image: STM32U575RGT6, spin-on-panic, no logging (self-test still
# runs; its output is compiled out). This is the default `cargo build`.
default = ["panic-halt", "production"]
# Production MCU chip select (LQFP-64, 1 MB).
production = ["embassy-stm32/stm32u575rg"]
# Nucleo-U575ZI-Q validation target (STM32U575ZIT6Q, 2 MB). Build/flash with
# `make run-nucleo` (passes --no-default-features so `production`/panic-halt drop
# out in favour of the ZI chip + panic-probe). Enables RTT/defmt result logging
# (+ defmt.x, see build.rs) and routes embassy's own logs to defmt.
nucleo = [
    "dep:defmt", "dep:defmt-rtt", "dep:panic-probe",
    "embassy-stm32/stm32u575zi",
    "embassy-stm32/defmt", "embassy-executor/defmt", "embassy-usb/defmt",
    "embassy-time/defmt", "embassy-time/defmt-timestamp-uptime",
]
# Low-power validation: skip USB (which would hold the Stop1 refcount) and idle
# in bursts so the executor enters STOP2 between them. Combine with `nucleo`:
# `--no-default-features --features nucleo,stop-demo`. See main.rs.
stop-demo = []
# Same demo but keeps the debug/RTT link alive (Sleep instead of deep STOP), so
# the per-wake timing is observable over RTT — validates the RTC time accounting
# (tick-hz-32_768 / embassy#3504). Real STOP2 drops the debug link.
stop-demo-debug = ["stop-demo", "embassy-stm32/low-power-debug-with-sleep"]

# Bignum code is large; favour size and keep symbols for debugging.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
debug = true

[profile.dev]
opt-level = 1
