[package]
name = "calcumaker-matrix-fw"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "calcumaker — RGB dot-matrix display MODULE firmware (RP2040, no_std): an SPI-slave 'display intent' receiver that renders to a 96x24 WS2812 array via PIO"
readme = "README.md"

# The RGB-matrix display board's own MCU. It is an SPI SLAVE: the U575
# (calcumaker-fw) writes a `calcumaker-display-proto::DisplayFrame`; this fw
# renders the text rows into a pixel framebuffer and streams it to the 2304x
# XL-1010 (WS2812) array over 3 PIO-driven data chains. The RP2040's PIO is the
# ideal WS2812 engine (rock-solid timing, near-zero CPU).
[dependencies]
cortex-m-rt = "0.7"
panic-halt = { version = "1.0", optional = true }
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }
panic-probe = { version = "0.3", features = ["print-defmt"], optional = true }

# Embassy async HAL + runtime for the RP2040 (dual Cortex-M0+, thumbv6m). Its
# critical-section impl is multicore-safe (do NOT use cortex-m single-core CS).
embassy-rp = { version = "0.10", features = [
    "rp2040", "rt", "time-driver", "critical-section-impl", "unstable-pac",
] }
embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread"] }
embassy-time = { version = "0.5" }
embassy-futures = "0.1"

# The shared display-intent wire protocol (frame the U575 sends).
calcumaker-display-proto = { path = "../calcumaker-display-proto" }

[features]
# Production image: spin-on-panic, no logging.
default = ["panic-halt"]
# Dev logging over RTT (SWD) + panic-probe.
dev = [
    "dep:defmt", "dep:defmt-rtt", "dep:panic-probe",
    "embassy-rp/defmt", "embassy-executor/defmt", "embassy-time/defmt",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
debug = true

[profile.dev]
opt-level = 1
